# pauline-neural-study

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: 1 Corinthians.txt  1 Thessalonians.txt  1 Timothy.txt  2 Corinthians.txt  2 Thessalonians.txt  2 Timothy.txt  Colossians.txt  Ephesians.txt  Galatians.txt  Hebrews.txt  Philemon.txt  Philippians.txt  Romans.txt  Titus.txt
gcp/: run_analysis.sh  setup_vm.sh
output/: bayesian_topics.json  corpus_summary.json  cross_epistle_results.json  embeddings_chapter.npz  embeddings_epistle.npz  embeddings_sentence.npz  fractal_results.json  generated_sentences.txt  pipeline_summary.json
paper/: error_report.md  study_design.md
src/pauline/: __init__.py  config.py  pipeline.py
src/pauline/analysis/: __init__.py  semantic.py  visualization.py
src/pauline/bayesian/: __init__.py  model.py
src/pauline/bootstrap/: __init__.py  sampler.py
src/pauline/combinatorial/: __init__.py  recombiner.py
src/pauline/corpus/: __init__.py  fetch.py  loader.py
src/pauline/cross_epistle/: __init__.py  analyzer.py
src/pauline/embeddings/: __init__.py  trainer.py
src/pauline/fractal/: __init__.py  analyzer.py
src/pauline/permutation/: __init__.py  plm.py
src/pauline/vae/: __init__.py  model.py
tests/: test_pipeline.py
